RESOLVED FIXED214165
"ESPN Fantasy Sports" does not respond to mouse events, only touch events
https://bugs.webkit.org/show_bug.cgi?id=214165
Summary "ESPN Fantasy Sports" does not respond to mouse events, only touch events
Tim Horton
Reported 2020-07-09 16:15:59 PDT
"ESPN Fantasy Sports" does not respond to mouse events, only touch events
Attachments
Patch (3.56 KB, patch)
2020-07-09 16:16 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2020-07-09 16:16:19 PDT
Tim Horton
Comment 2 2020-07-09 16:16:21 PDT
EWS
Comment 3 2020-07-09 17:07:07 PDT
Committed r264205: <https://trac.webkit.org/changeset/264205> All reviewed patches have been landed. Closing bug and clearing flags on attachment 403927 [details].
Note You need to log in before you can comment on or make changes to this bug.