"ESPN Fantasy Sports" does not respond to mouse events, only touch events https://bugs.webkit.org/show_bug.cgi?id=214165 <rdar://problem/64671543>

Reviewed by Wenson Hsieh.

Source/WebCore:

* platform/RuntimeApplicationChecks.h:
* platform/cocoa/RuntimeApplicationChecksCocoa.mm:
(WebCore::IOSApplication::isESPNFantasySports):

Source/WebKit:

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView shouldUseMouseGestureRecognizer]):
Add a bundle check.


Canonical link: https://commits.webkit.org/226974@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264205 268f45cc-cd09-0410-ab3c-d52691b4dbfc