Source/WebCore/platform/RuntimeApplicationChecks.h
@@ -108,6 +108,7 @@ WEBCORE_EXPORT bool isFeedly();
 WEBCORE_EXPORT bool isPocketCity();
 WEBCORE_EXPORT bool isEssentialSkeleton();
 WEBCORE_EXPORT bool isLaBanquePostale();
+WEBCORE_EXPORT bool isESPNFantasySports();
 
 } // IOSApplication
 
